<resources>
    <string name="app_name">DogRetriever</string>
    <string name="dog_retriever">Dog Retriever</string>
    <string name="hello_guest">Hello Guest/User</string>
    <string name="phone_number">Phone Number:</string>
    <string name="address">Address:</string>
    <string name="e_mail">E-Mail</string>
    <string name="my_dogs">My Dogs:</string>
    <string name="google_maps_key">AIzaSyDTDmMNFTekqcFEWeK9yAJYzxdaM-IU8Wk</string>

    <string name="about_fragment_title">Dog Retriever</string>
    <string name="about_fragment_credits">Developers: Tal Farbman, Dor Ashush.</string>
    <string name="about_fragment_text">Dog Retriever is a lost dog locating system
    that has been developed as a final project for Software Engineering B.Sc.\nThe goal of this project is to provide an easy to use infrastructure
    with high availability to find lost dogs.\nThe systems includes the following features:\n
    1. Location predication algorithm.\n
    2. Hot Zones algorithm.\n
    3. User Profile management.\n
    4. Scanning tool.\n
    5. Notifications tool.\nand much more...\n
    </string>

    <string name="setting_fragment_title">Settings fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone_number">Phone number(Optional)</string>
    <string name="prompt_address">Address(Optional)</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_user_name">User name</string>

    <string name="add_dog_popup_dog_name">Dog Name</string>
    <string name="add_dog_popup_dog_color">Color</string>
    <string name="add_dog_popup_dog_size">Size</string>
    <string name="add_dog_popup_dog_breed">Breed</string>
    <string name="add_dog_popup_notes">Notes</string>
    <string name="add_dog_popup_collar_id">Collar ID</string>


    <string name="prompt_password">Password</string>
    <string name="prompt_re_enter_password">Re enter password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_user_name">This user name is invalid</string>
    <string name="error_invalid_full_name">This full name is invalid</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="home_btn_text">Home</string>
    <string name="about_toolbar_btn">About</string>
    <string name="settings_toolbar_btn">Settings</string>
    <string name="profile_toolbar_btn">Profile</string>

    <string-array name="size">
        <item>TINY</item>
        <item>SMALL</item>
        <item>MEDIUM</item>
        <item>LARGE</item>
    </string-array>


    <string name="sync_pref">Sync</string>

    <string name="pref_hotzones_radius_default_value">4000</string>

    <string-array name="pref_hotzones_radius_type_entries">
        <item>Small 1 Km</item>
        <item>Medium 4 Km</item>
        <item>Big 8 Km</item>
    </string-array>

    <string-array name="pref_hotzones_radius_type_values">
        <item>1000</item>
        <item>4000</item>
        <item>8000</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dogs_around_you">Dogs around you:</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="upload_your_dog_picture">Upload your dog picture</string>
    <string name="choose_file">Choose File</string>
    <string name="file_name">file name</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="choose_dog">Choose dog:</string>
    <string name="you_don_t_have_any_dogs">You don\'t have any dogs</string>
    <string name="scan_completed">Scan completed</string>
    <string name="we_sent_a_message_to_the_owner_here_is_some_contact_information">We sent a message to the owner.\nHere is some contact information:</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="address2">Address:</string>
    <string name="mail">Mail:</string>
    <string name="call_owner">Call Owner</string>
    <string name="close">Close</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello</string>
    <string name="helloguest">Hello Guest</string>
    <string name="not_available">Not available</string>
</resources>
