<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.Fragments.AboutFragment"
    android:background="@drawable/pattern02"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_fragment_title"
        android:fontFamily="@font/merienda_one"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_fragment_text"
        android:padding="10dp"
        android:textSize="15dp"
        android:fontFamily="@font/merienda_one"

        />

    <TextView
        android:fontFamily="@font/merienda_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_fragment_credits"
        android:padding="10dp"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        />


</LinearLayout>