<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/dog_image_upload_layout_popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dog_image_upload_popup_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="@string/upload_your_dog_picture"
        android:fontFamily="@font/merienda_one"
        android:textSize="20dp"
        android:textStyle="bold" />


    <ScrollView
        android:id="@+id/dog_image_upload_layout_title_popup_layout_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/dog_image_upload_layout_sublinarlayout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <Button
                android:id="@+id/dog_image_upload_layout_choose_file_button"
                style="?android:textAppearanceSmall"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/asset22h"
                android:onClick="openMapWithNotificationCords"
                android:text="@string/choose_file"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dog_image_upload_layout_choose_file_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/dog_image_upload_layout_choose_file_button"
                android:hint="@string/file_name"
                android:fontFamily="@font/merienda_one"
                android:enabled="false"

                />


            <ImageView
                android:id="@+id/dog_image_upload_popup_layout_imageviewbeforeupload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dog_image_upload_layout_choose_file_button"
                android:adjustViewBounds="true"
                android:background="@drawable/profile" />

            <ProgressBar
                android:id="@+id/dog_image_upload_progressbar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dog_image_upload_popup_layout_imageviewbeforeupload"
                >
            </ProgressBar>

            <Button
                android:id="@+id/dog_image_upload_popup_layout_upload_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/dog_image_upload_progressbar"
                android:background="@drawable/asset22h"
                android:text="@string/upload" />

            <Button
                android:id="@+id/dog_image_upload_popup_layout_next_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/asset22h"
                android:layout_below="@+id/dog_image_upload_progressbar"
                android:text="@string/next" />
        </RelativeLayout>
    </ScrollView>


</LinearLayout>
