<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scan_owner_info_layout_popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/scan_owner_info_popup_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/scan_completed"
        android:fontFamily="@font/merienda_one"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/we_sent_a_message_to_the_owner_here_is_some_contact_information"
        android:lines="2"
        android:fontFamily="@font/merienda_one"
        android:padding="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ProgressBar
            android:id="@+id/scan_small_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            />


        <ScrollView
            android:id="@+id/scan_popup_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/scan_pop_up_owner_info_image"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="5dp"
                    app:civ_border_color="@color/light_blue"
                    />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/scan_pop_up_owner_info_name_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/merienda_one"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/scan_pop_up_owner_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Default Name"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/merienda_one"
            android:layout_toRightOf="@+id/scan_pop_up_owner_info_name_description"
            />

    </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_number_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Default Number"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:layout_toRightOf="@+id/scan_pop_up_owner_info_number_description"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_address_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address2"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Default Address"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:layout_toRightOf="@+id/scan_pop_up_owner_info_address_description"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_mail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/scan_pop_up_owner_info_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Default Mail"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/merienda_one"
                        android:layout_toRightOf="@+id/scan_pop_up_owner_info_mail_description"
                        />


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/scan_pop_up_owner_info_sublinarlayout_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/scan_pop_up_owner_info_call_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/merienda_one"
                        android:text="@string/call_owner"
                        android:background="@drawable/asset22h"
                        android:onClick="onCallOwnerClicked"
                        />

                    <Button
                        android:id="@+id/scan_pop_up_owner_info_cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:textStyle="bold"
                        android:text="@string/close"
                        android:background="@drawable/asset22h"
                        android:fontFamily="@font/merienda_one"
                        android:onClick="onClosedOwnerInfoClicked"
                        />

                </LinearLayout>

            </LinearLayout>



        </ScrollView>


    </RelativeLayout>



</LinearLayout>
