<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.ProfileActivity"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/profile"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/profileName"
            android:text="Full Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textCapWords"
            />

        <ImageButton
            android:layout_margin="15dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/edit"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_blue">
    <TextView
        android:id="@+id/profilePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/profileEditPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/profileEditAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        >

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail" />

    <EditText
        android:id="@+id/profileEditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false" />

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_dogs"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@color/black"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <ListView
        android:id="@+id/profile_dogs_list"
        android:layout_width="0dp"
        android:layout_weight="0.80"
        android:layout_height="match_parent"
        android:layout_gravity="left"

        />

        <ImageButton
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_gravity="right"
            android:onClick="onClickAdd"
            android:src="@drawable/add"
            />

    </LinearLayout>

</LinearLayout>