<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scan_layout_popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/scan__popup_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/dogs_around_you"
        android:padding="20dp"
        android:fontFamily="@font/merienda_one"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ProgressBar
            android:id="@+id/scan_small_progres_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            />


        <ScrollView
            android:id="@+id/scan_popup_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/scan_popup_layout_recyclerview"
                    >

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/scan__popup_layout_sublinarlayout_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <Button
                        android:id="@+id/scan__popup_layout_refresh_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:text="@string/refresh"
                        android:fontFamily="@font/merienda_one"
                        android:background="@drawable/asset22h"
                        android:onClick="scanRefresh"
                        />

                    <Button
                        android:id="@+id/scan__popup_layout_cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="2dp"
                        android:textStyle="bold"
                        android:text="@string/cancel"
                        android:fontFamily="@font/merienda_one"
                        android:background="@drawable/asset22h"
                        android:onClick="cancelScanPopUp"
                        />

                </LinearLayout>

            </LinearLayout>



        </ScrollView>


    </RelativeLayout>



</LinearLayout>
